test: add serializer, deserializer, undo/redo tests